Closed
Bug 1308351
Opened 9 years ago
Closed 9 years ago
Know your rights snippet link may be broken
Categories
(Firefox :: General, defect)
Firefox
General
Tracking
()
VERIFIED
FIXED
Firefox 52
People
(Reporter: jcollings, Assigned: Gijs)
References
Details
Attachments
(2 files)
|
16.96 KB,
image/png
|
Details | |
|
58 bytes,
text/x-review-board-request
|
mikedeboer
:
review+
ritu
:
approval-mozilla-aurora+
ritu
:
approval-mozilla-beta+
lizzard
:
approval-mozilla-release+
|
Details |
Hi all,
I'm getting flagged by someone that the first run snippet "Mozilla Firefox is free and open source software from the non-profit Mozilla Foundation. Know your rights...." link is broken. This is the first snippet a user sees after a fresh download.
If someone can investigate the link and put in here where it actually should go to?
Thanks,
Jean
Comment 1•9 years ago
|
||
This is the default snippet that's included in Firefox (it's not pulled from a server, unlike the others).
The code here sets the link to go to "about:rights"... http://searchfox.org/mozilla-central/rev/76609a05d6ef7ba4223ed79e479c73fb2543a107/browser/base/content/abouthome/aboutHome.js#317-322
Testing in Firefox 49 (current Release), I see that about:rights itself is fine, but clicking the link the snippet results in a console error: "Security Error: Content at about:home may not load or link to about:rights.".
Gijs, is this more fallout from bug 1277583? (Or one of the ones like that?)
Updated•9 years ago
|
Flags: needinfo?(gijskruitbosch+bugs)
| Assignee | ||
Comment 2•9 years ago
|
||
The good news is I know why this is and there's a pretty safe 1-liner we can use to make it work on release/beta.
The bad news is we've been shipping this as part of 48 as well as 49...
Blocks: CVE-2016-5268
| Comment hidden (mozreview-request) |
Comment 4•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8798810 [details]
Bug 1308351 - make about:rights web-linkable like about:license and friends,
https://reviewboard.mozilla.org/r/84210/#review82782
LGTM. Let's get this in asap!
Attachment #8798810 -
Flags: review?(mdeboer) → review+
| Assignee | ||
Updated•9 years ago
|
| Assignee | ||
Updated•9 years ago
|
status-firefox49:
--- → affected
status-firefox50:
--- → affected
status-firefox51:
--- → affected
status-firefox52:
--- → affected
Pushed by gijskruitbosch@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/b8671328337d
make about:rights web-linkable like about:license and friends, r=mikedeboer
| Assignee | ||
Comment 6•9 years ago
|
||
Comment on attachment 8798810 [details]
Bug 1308351 - make about:rights web-linkable like about:license and friends,
Approval Request Comment
[Feature/regressing bug #]: bug 1253673
[User impact if declined]: the first snippet people see on about:home has a broken link
[Describe test coverage new/current, TreeHerder]: noooope. I'll work on tests for Nightly, but if there had been tests this wouldn't have happened...
[Risks and why]: none.
bug 1253673 broke linking to about: URIs by default. We then unbroke a bunch of the links that automation hadn't caught, but I didn't think there were in-product links to about:rights, which is how this got missed. This bug specifically changes about:rights to be linkable again (in a sense it's basically reverting the change that bug 1253673 made, but specifically for about:rights).
I'm asking for release uplift because our initial behaviour is pretty important. On the other hand, we have now shipped this in 48 and 49 and this is the first time we heard anything. I would argue it doesn't need a point-release on its own, but if we're doing another one it would be a very safe ride-along.
[String/UUID change made/needed]: nope.
Attachment #8798810 -
Flags: approval-mozilla-release?
Attachment #8798810 -
Flags: approval-mozilla-beta?
Attachment #8798810 -
Flags: approval-mozilla-aurora?
| Assignee | ||
Comment 7•9 years ago
|
||
The more I think about this, the more I think the long-term fix is just gritting teeth and fixing bug 1228118, which is gonna be annoying but possible now that some of the storage stuff should (tm) be less painful (see bug 1228118 comment 1).
After that, about:home should be able to link to about:rights even without about:rights being world-linkable.
Flags: needinfo?(gijskruitbosch+bugs)
| Assignee | ||
Comment 8•9 years ago
|
||
Given that there's a separate bug on file for de-nesting about:, let's just let this close when the 'short' fix lands.
I'll file a separate followup to write a test for this particular case.
Keywords: leave-open
Comment 9•9 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 52
Hello Jean, could you please verify this issue is fixed as expected on a latest Nightly build? Thanks!
Flags: needinfo?(jcollings)
Comment on attachment 8798810 [details]
Bug 1308351 - make about:rights web-linkable like about:license and friends,
Fixing a pretty visible broken link on first run, Aurora51+, Beta50+
Attachment #8798810 -
Flags: approval-mozilla-beta?
Attachment #8798810 -
Flags: approval-mozilla-beta+
Attachment #8798810 -
Flags: approval-mozilla-aurora?
Attachment #8798810 -
Flags: approval-mozilla-aurora+
Comment 12•9 years ago
|
||
| bugherder uplift | ||
Comment 13•9 years ago
|
||
| bugherder uplift | ||
| Reporter | ||
Comment 14•9 years ago
|
||
(In reply to Ritu Kothari (:ritu) from comment #10)
> Hello Jean, could you please verify this issue is fixed as expected on a
> latest Nightly build? Thanks!
I just tried to install the Nightly build and snippets from my release channel are being transferred over so I can't see the first run snippet.
Flags: needinfo?(jcollings)
Comment 15•9 years ago
|
||
I previously reproduced this bug, and can verify that it's now fixed with a current Nightly + new profile. Clicking the default snippet text takes me to about:rights as expected.
Status: RESOLVED → VERIFIED
Comment 16•9 years ago
|
||
Also: big thanks to Gijs for jumping on this fix so quickly!
Updated•9 years ago
|
QA Whiteboard: [good first verify]
| Assignee | ||
Updated•9 years ago
|
Comment 18•9 years ago
|
||
Comment on attachment 8798810 [details]
Bug 1308351 - make about:rights web-linkable like about:license and friends,
Taking this as a ridealong, looks safe, affects our first run users.
Most current users will have updated to 49 already, but we still have a month to go till 50 release; that's a lot of new downloads for 49 still to come.
Attachment #8798810 -
Flags: approval-mozilla-release? → approval-mozilla-release+
Comment 19•9 years ago
|
||
| bugherder uplift | ||
Comment 20•9 years ago
|
||
I have reproduced this bug with Nightly 52.0a1 (2016-10-06) (64-bit) on Windows 7, 64 Bit !
This bug's fix is verified with latest Beta.
Build ID : 20161115182233
User Agent : Mozilla/5.0 (Windows NT 6.3; Win64; x64; rv:51.0) Gecko/20100101 Firefox/51.0
[bugday-20161116]
Comment 21•9 years ago
|
||
The fix is verified on Beta 51.0b3
Build ID :20161124073320
User Agenet :Mozilla/5.0 (Windows NT 10.0; rv:51.0) Gecko/20100101 Firefox/51.0
Comment 22•9 years ago
|
||
It is verified on Firefox Beta 51.0b3
[testday-20161125]
| Assignee | ||
Updated•9 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•