Bug 1308351 - make about:rights web-linkable like about:license and friends, r=mikedeboer a=ritu

This is a one-line fix. about:rights doesn't take query parameters, isn't interactive, and so making it linkable should be fine for uplift.

MozReview-Commit-ID: CQwh6SPLARf